top menu, footer and summary

--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -1,3 +1,7 @@
 commons:
   menu:
     toggle: Navigation betweend CIDS websites
+  credit: Made by <a href="https://www.osuny.org/" title="Osuny - external link" target="_blank" rel="noreferrer">noesya + cmjnrvb studio</a>
+  footer:
+    partners:
+      title: The CIDS, a joint center of
