--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -1,7 +1,7 @@
 commons:
   menu:
     toggle: Navigation betweend CIDS websites
-  credit: Made by <a href="https://www.osuny.org/" title="Osuny - external link" target="_blank" rel="noreferrer">noesya + cmjnrvb studio</a>
+  credit: Made by <a href="https://www.noesya.coop/" title="noesya - external link" target="_blank" rel="noreferrer">noesya</a> + <a href="https://www.cmjnrvb.net/" title="cmjnrvb studio - external link" target="_blank" rel="noreferrer">cmjnrvb studio</a>
   footer:
     partners:
       title: The CIDS, a joint center of
